--- a/netdimensions-api-client-servlet-example/pom.xml
+++ b/netdimensions-api-client-servlet-example/pom.xml
@@ -19,6 +19,11 @@
     	<artifactId>netdimensions-api-client-servlet</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+  	  <artifactId>guava</artifactId>
+  	  <version>17.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>netdimensions-api-client-servlet-example</finalName>
