--- a/netdimensions-api-client-servlet/pom.xml
+++ b/netdimensions-api-client-servlet/pom.xml
@@ -1,34 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.netdimensions</groupId>
-  <artifactId>netdimensions-api-client-servlet</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>com.netdimensions</groupId>
+	<artifactId>netdimensions-api-client-servlet</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>Servlet extensions to the NetDimensions Talent Suite API Client Library for Java</name>
-  <url>http://www.netdimensions.com</url>
+	<name>Servlet extensions to the NetDimensions Talent Suite API Client Library for Java</name>
+	<url>http://www.netdimensions.com</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+	</properties>
 
-  <dependencies>
-  <dependency>
-  	<groupId>javax.servlet</groupId>
-  	<artifactId>servlet-api</artifactId>
-  	<version>2.5</version>
-  </dependency>
-  <dependency>
-  	<groupId>com.netdimensions</groupId>
-  	<artifactId>netdimensions-api-client</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  	<groupId>com.google.guava</groupId>
-  	<artifactId>guava</artifactId>
-  	<version>17.0</version>
-  </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netdimensions</groupId>
+			<artifactId>netdimensions-api-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+		</dependency>
+	</dependencies>
 </project>
