--- a/netdimensions-api-client/pom.xml
+++ b/netdimensions-api-client/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
 	</dependencies>
 </project>
